Issue 479 - Removed scrollbars and added lightbox background

--- a/front/assets/style/variables.scss
+++ b/front/assets/style/variables.scss
@@ -5,6 +5,7 @@ $color-muted-grey: #c0b7c5;
 $color-insanely-crazy-light-greyish-purple: #f3f0f4;
 $color-off-white: #fafafa;
 $color-dark-off-white: #efefef;
+$color-light-box: #9a9a9a;
 $welcome-background-color: #aaaaaa99;
 $welcome-background-yellow: #fbe192;
 $welcome-arrow-background: #5b41bb;
